# hprobe

./: .gitignore  .pre-commit-config.yaml  404.html  Containerfile  LICENSE  README.md  hprobe_tutorial.ipynb  hprobes_tutorial.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: container.yml  docs.yml  lint.yml  release.yml  tests.yml
api/cett/: index.html
api/probe/: index.html
data/: medqa_sample.jsonl  mmlu_sample.jsonl  responses_sample.jsonl
docs/: index.md
docs/api/: cett.md  probe.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: cli.md  datasets.md  how-it-works.md  production.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/cli/: index.html
guide/datasets/: index.html
guide/how-it-works/: index.html
guide/production/: index.html
search/: search_index.json
src/hprobe/: __init__.py  cett.py  cli.py  probe.py
src/hprobes/: __init__.py  cett.py  cli.py  probe.py
tests/: conftest.py  test_cett.py  test_cli.py  test_integration.py  test_probe.py
