[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hprobe"
version = "0.2.0"
description = "Hallucination neuron discovery and causal validation for transformer LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["hallucination", "interpretability", "llm", "neurons", "probing"]
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "tqdm>=4.65",
    "accelerate>=1.0",
]

[project.optional-dependencies]
parquet = ["pyarrow>=14.0"]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
hprobe = "hprobe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hprobe"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
