[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hprobes"
version = "0.4.0"
description = "Hallucination neuron discovery and causal validation for transformer LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["hallucination", "interpretability", "llm", "neurons", "probing"]
authors = [{ name = "Huseyin Cavus", email = "huseyincavus@proton.me" }]
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "tqdm>=4.65",
    "accelerate>=1.0",
    "pyarrow>=14.0",
    "safetensors>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/huseyincavusbi/hprobes"
Repository = "https://github.com/huseyincavusbi/hprobes"
Issues = "https://github.com/huseyincavusbi/hprobes/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.4",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
]

[project.scripts]
hprobes = "hprobes.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hprobes"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
